<resources>
    <string name="app_name">MediaTracker</string>

    <!-- Screen names -->
    <string name="home">Home</string>
    <string name="games">Games</string>
    <string name="books">Books</string>
    <string name="account">Account Management</string>

    <!-- Log In/Sign Up Screen labels -->
    <string name="log_in_label">Please enter your login information</string>
    <string name="email_placeholder">Email Address</string>
    <string name="password_placeholder">Password</string>
    <string name="no_account_label">No Account? Click below to create one</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Create Account</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="name_placeholder">Display Name</string>

    <!-- Home Screen Labels -->
    <string name="home_welcome">Welcome %1$s</string>
    <string name="game_latest">Latest Game:</string>
    <string name="book_latest">Latest Book:</string>
    <string name="log_out_button">Log Out</string>
    <string name="account_button">Account</string>


    <!-- List and Detail Screen Labels -->
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="sort_options">Sorting Options</string>
    <string name="sort">Sort By:</string>
    <string name="sort_release">Release Date</string>
    <string name="sort_complete">Completion</string>
    <string name="sort_rating">Rating</string>
    <string name="complete_date">Completion Date: %1$s</string>
    <string name="rating">Rating: %1$d/5</string>
    <string name="platform">Platform: %1$s</string>
    <string name="details_button">View</string>
    <string name="game_details_button">View Game</string>
    <string name="book_details_button">View Book</string>
    <string name="genre">Genre: %1$s</string>
    <string name="publisher">Publisher: %1$s</string>
    <string name="developer">Developer: %1$s</string>
    <string name="release_date">Release Date: %1$s</string>
    <string name="game_edit_button">Edit Game Details</string>
    <string name="book_edit_button">Edit Book Details</string>

    <!-- Add Screen Labels -->
    <string name="add_game_label">Add New Game</string>
    <string name="add_book_label">Add New Book</string>
    <string name="edit_game_label">Edit Game</string>
    <string name="edit_book_label">Edit Book</string>
    <string name="add_title">Title:</string>
    <string name="add_author">Author:</string>
    <string name="add_comp_date">Completion Date:</string>
    <string name="add_release_date">Release Date:</string>
    <string name="add_rating">Rating:</string>
    <string name="add_developer">Developer:</string>
    <string name="add_publisher">Publisher:</string>
    <string name="add_image">Image:</string>
    <string name="add_image_selected">Image Selected</string>
    <string name="add_platform">Platform:</string>
    <string name="add_genre">Genre:</string>
    <string name="add_save_game">Save Game</string>
    <string name="add_save_book">Save Book</string>
    <string name="add_cancel">Cancel</string>
    <string name="add_image_button">Select Image</string>

    <!--Account Management Labels -->
    <string name="change_name">Change Display Name</string>
    <string name="name">Display Name</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="account_save">Save</string>
    <string name="account_cancel">Cancel</string>
    <string name="account_delete">Delete Account</string>
    <string name="account_save_name">Save Name</string>
    <string name="account_save_pass">Save Password</string>

    <string name="placeholder">placeholder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>