<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BookAddFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/BookAddLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_book_label"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/BookAddTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_title"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/BookAddLabel" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add_author"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/BookAddTitleLabel" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="143dp" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add_genre"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add_rating"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add_comp_date"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add_image"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/BookAddTitle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@id/BookAddTitleLabel"
                app:layout_constraintStart_toEndOf="@+id/BookAddTitleLabel" />

            <EditText
                android:id="@+id/BookAddAuthor"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5" />


            <EditText
                android:id="@+id/BookAddGenre"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/BookAddCompDate"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <Button
                android:id="@+id/BookAddSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/add_save_book"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BookAddImageName" />

            <Button
                android:id="@+id/BookAddCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/add_cancel"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BookAddImageName" />

            <Button
                android:id="@+id/BookAddImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/add_image_button"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <TextView
                android:id="@+id/BookAddImageName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/add_image_selected"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/BookAddImageCheck"
                app:layout_constraintTop_toBottomOf="@+id/BookAddImageButton" />

            <RelativeLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/spinner_border"
                android:orientation="horizontal"
                app:layout_constraintBaseline_toBaselineOf="@id/textView9"
                app:layout_constraintStart_toStartOf="@+id/guideline">

                <Spinner
                    android:id="@+id/BookAddRating"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:dropDownWidth="50dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"

                    android:src="@drawable/down_arrow" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/BookAddImageCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/check"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/BookAddImageButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>